# switcheroo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  com.local.keytap.plist  com.local.rebind.plist  com.local.switcheroo.plist  config.toml  install.sh  uninstall.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.opencode/: opencode.json
bundle/: Info.plist
docs/: PRD.md  distribution.md
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts
raycast-extension/src/: add-remap.tsx  edit-config.ts  restart.ts  view-logs.tsx  view-remaps.tsx
raycast-extension/src/lib/: config.ts  keys.ts  service.ts
src/: config.rs  engine.rs  event_tap.rs  hidutil.rs  keycode.rs  macos_ffi.rs  main.rs
