[package]
name = "keytap"
version = "0.1.0"
edition = "2021"
description = "Lightweight macOS keyboard remapper using CGEventTap"
license = "MIT"

[dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
dirs = "6"
